<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Mail</string>
    <string name="title_section2">Contacts</string>
    <string name="jim_title_section1">Tits</string>
    <string name="jim_title_section2">Bitches</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">User@e-mail.com</string>
    <string name="Login_button">Login</string>
    <string name="signUpLabel">Sign Up</string>
    <string name="submitButton">Submit</string>
    <string name="Logout_menu">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup_error_message">Please make sure all fields are filled in</string>
    <string name="signup_error_title">Oi! Dickhead!</string>
    <string name="login_error_message">Are you thick? Enter your details!!!</string>
    <string name="login_error_title">Oi! Dickhead!</string>
    <string name="title_activity_forgotten">ForgottenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ForgotText">Forgot your Password?</string>
    <string name="Duh">Only going to let you do this once!</string>
    <string name="ResetButton">Reset</string>
    <string name="emptyinboxlabel">No New Messages</string>
    <string name="emptyfriendslabel">No Friends added yet</string>
    <string name="edit_friends_menu">Add/Remove Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">FFS!</string>

</resources>
